# tsai2onnx

./: .gitignore  README.md
data/npydata_zmj/: X_test.npy  y_test.npy
models/: 20240102InceptiontimePlus_zmj.onnx  20240102InceptiontimePlus_zmj_raw.onnx  model.param  model_raw.param  sim_model.onnx  sim_model_raw.onnx  traced_model.ncnn.param  traced_model.pnnx.onnx  traced_model.pnnx.param  traced_model_ncnn.py  traced_model_pnnx.py
ncnn/: CMakeLists.txt  README.md  main.cpp
ncnn/data/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+161 more)
ncnn/lib/: data_loader.cpp  data_loader.h  post_process.cpp
ncnn/models/: 20240102InceptiontimePlus_zmj-sim-fp16.param  20240102InceptiontimePlus_zmj-sim-opt-fp16.param  traced_model.pt
ncnn/ncnn/include/ncnn/: platform.h
ncnn/ncnn/lib/pkgconfig/: ncnn.pc
ncnn/tools/: npy2txt.py
ncnn_json/: CMakeLists.txt  data.json  main.cpp  result.json
ncnn_json/lib/: data_loader.cpp  data_loader.h  post_process.h
onnxruntime/: README.md  main.py
